[tool.poetry]
name = "cattle_lca"
version = "0.3.0"
description = "Tier 2 Environmental Impact Assessment tool for dairy and beef cattle."
authors = ["Colm Duffy"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "2.1.4"
numpy = "^1.25.0"
seaborn = "^0.13.1"
matplotlib = "^3.4.3"
sqlalchemy = "^1.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"